Remove obsolete jvm options from project.clj.